# Graph_creation

./: .gitignore  README.md  data sources  data_sources  hi.tsv  hi2.tsv  massif.out.24055  massif.out.24539  massif.out.25360  notes_group.md  result.csv  result.json  test.profile  test2.csv  test2.json  test3.csv  test3.json
PFATeam/: CMakeLists.txt  build_run  graph.h  graph_container.h  hi2.tsv  main.cpp  main_cfg.cpp  notes.md  parallel_main.cpp  results.txt  test.cfg  test2.csv  test2.json  tester.cpp  tester.h  testgraph.txt  utils.h
PFATeam/graph/: Edge_centric.h  graph.h  graph_container.h  graphsplit.h  parallel_graph.h  sequential_split.h  splitcreator.h  splitmerger.h
PFATeam/memory/: MemoryProfiler.cpp  MemoryProfiler.h  ProfilableAllocator.h  cmemory.h
PFATeam/reader/: ParallelReader.h  ParallelReaderEdgeCentric.h
PFATeam/results/: .~lock.detailed_results.xlsx#  140622.csv  140622.json  140622.profile  170622.csv  170622.json  170622.profile  200622.csv  200622.json  analysis.ipynb  data_structure_results.csv  data_structure_results.xlsx  description.md  detailed_results.xlsx  visualise.py
PFATeam/results/rami/: SSD.csv  SSD.json  SSD.profile  analysis.ipynb  diskinfo  sample.csv  sample.json  sample.profile
PFATeam/results/rami/aws/: .~lock.aws-parallel.tsv#  aws-parallel.json  aws-parallel.output  aws-parallel.tsv  aws-sequential.json  aws-sequential.tsv  cpuinfo  diskinfo  info.json  meminfo
PFATeam/results/rami/legion5/: cpuinfo  diskinfo  info.json  legion5-parallel.tsv  legion5-sequential.json  legion5-sequential.profile  legion5-sequential.tsv  meminfo
PFATeam/results/saief/: .~lock.saief-parallel-2.tsv#  cpuinfo  diskinfo  info.json  meminfo  saief.json  saief.tsv
PFATeam/results/saief/ideapad-gaming/: ideapad-parallel.json  ideapad-parallel.profile  ideapad-parallel.tsv  ideapad-sequential.profile  saief-parallel-nolimit.json  saief-parallel-nolimit.profile  saief-parallel-nolimit.tsv
PFATeam/utils/: types.h  utils.h
PFATeam/writer/: writer.cpp  writer.h
Parallel/: CMakeLists.txt  Graph.cpp  Graph.h  average_results_all_parallel.txt  average_results_parallel.csv  main  main.cpp  methods.cpp  methods.h  test_script_parallel.sh
Results/: Untitled.ipynb  human-output.txt  legion5.json  legion5.profile  test.csv  test.json
Sequential/: CMakeLists.txt  Sequential_Graph.cpp  Sequential_Graph.h  Split_Sequential_Graph.cpp  Split_Sequential_Graph.h  average_results_all_sequential.txt  average_results_all_split_seq.txt  average_results_sequential.csv  average_results_split_sequential.csv  main  main.cpp  methods.cpp  methods.h  metrics.h  test_script.sh  test_script_split_sequential.sh
Strategy3/: CMakeLists.txt  average_results_all_edge.txt  average_results_edge.csv  main  main.cpp  metrics.cpp  metrics.h  test.edges  test_script.sh
